[gd_scene load_steps=3 format=3 uid="uid://bev76tkdo33fj"]

[ext_resource type="Script" uid="uid://p5bl3i8psmm8" path="res://example/scenes/ui/ui.gd" id="1_fyqef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.17001563, 0.11081206, 0.12456433, 0.36078432)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="UI" type="Panel"]
offset_right = 297.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0xm2m")
script = ExtResource("1_fyqef")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="LabelBase" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 7
text = "Base "
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSliderBase" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
min_value = -180.0
max_value = 180.0

[node name="LabelBaseValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
size_flags_vertical = 7
text = "0°"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelArm" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 7
text = "Arm "
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSliderArm" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
min_value = -180.0
max_value = 180.0

[node name="LabelArmValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
size_flags_vertical = 7
text = "0°"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelWrist" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 7
text = "Wrist "
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSliderWrist" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
min_value = -180.0
max_value = 180.0

[node name="LabelWristValue" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
size_flags_vertical = 7
text = "0°"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelClaw1" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 7
text = "Claw 1 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSliderClaw1" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
min_value = -180.0
max_value = 180.0

[node name="LabelClaw1Value" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
size_flags_vertical = 7
text = "0°"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelClaw2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 7
text = "Claw 2 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="HSliderClaw2" type="HSlider" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
min_value = -180.0
max_value = 180.0

[node name="LabelClaw2Value" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
size_flags_vertical = 7
text = "0°"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="value_changed" from="GridContainer/HSliderBase" to="." method="_on_h_slider_base_value_changed"]
[connection signal="value_changed" from="GridContainer/HSliderArm" to="." method="_on_h_slider_arm_value_changed"]
[connection signal="value_changed" from="GridContainer/HSliderWrist" to="." method="_on_h_slider_wrist_value_changed"]
[connection signal="value_changed" from="GridContainer/HSliderClaw1" to="." method="_on_h_slider_claw_1_value_changed"]
[connection signal="value_changed" from="GridContainer/HSliderClaw2" to="." method="_on_h_slider_claw_2_value_changed"]
